deps/v8/test/message/fail/spread-call-3.out
*%(basename)s:6: TypeError: p is not iterable (cannot read property undefined)
var [x] = f(...p);
               ^
TypeError: p is not iterable (cannot read property undefined)
    at *%(basename)s:6:11
